AUT-4372: Add changes for CreateMfaMethod