@@ -2,12 +2,14 @@ package uk.gov.di.authentication.shared.services;
 
 import org.apache.commons.lang3.RandomStringUtils;
 import org.apache.logging.log4j.core.LogEvent;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
 import software.amazon.cloudwatchlogs.emf.logger.MetricsLogger;
 import software.amazon.cloudwatchlogs.emf.model.DimensionSet;
+import uk.gov.di.authentication.shared.entity.mfa.MFAMethodType;
 import uk.gov.di.authentication.sharedtest.logging.CaptureLoggingExtension;
 
 import java.util.Collections;
@@ -18,6 +20,8 @@ import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.hasItem;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.Mockito.verify;
+import static uk.gov.di.authentication.shared.entity.JourneyType.ACCOUNT_MANAGEMENT;
 import static uk.gov.di.authentication.sharedtest.logging.LogEventMatcher.withMessageContaining;
 
 class CloudwatchMetricsServiceTest {
@@ -26,9 +30,11 @@ class CloudwatchMetricsServiceTest {
     private final CaptureLoggingExtension logging =
             new CaptureLoggingExtension(CloudwatchMetricsService.class);
 
-    @Test
-    void shouldAlwaysIncludeEnvironmentDimensionFromConfiguration() {
-        var randomEnvironment = RandomStringUtils.secure().nextAlphanumeric(10);
+    @Nested
+    class GetDimensions {
+        @Test
+        void shouldAlwaysIncludeEnvironmentDimensionFromConfiguration() {
+            var randomEnvironment = RandomStringUtils.secure().nextAlphanumeric(10);
 
         var service = new CloudwatchMetricsService(configurationWithEnvironment(randomEnvironment));
 
@@ -38,75 +44,97 @@ class CloudwatchMetricsServiceTest {
         assertThat(dimensions.getDimensionValue("Environment"), is(randomEnvironment));
     }
 
-    @Test
-    void shouldIncludeEnvironmentDimensionAndAllExtraDimensions() {
-        var randomEnvironment = RandomStringUtils.secure().nextAlphanumeric(10);
 
-        var service = new CloudwatchMetricsService(configurationWithEnvironment(randomEnvironment));
+    @Nested
+    class EmitMetric {
+        @Test
+        void shouldEmitMetricWithNamespace() {
+            var service = new CloudwatchMetricsService(configurationWithEnvironment("test"));
+            var metricsLogger = Mockito.mock(MetricsLogger.class);
 
-        var dimensions = service.getDimensions(Map.of("Key1", "Value1"));
+            service.emitMetric("Metric", 1, Collections.emptyMap(), metricsLogger);
 
-        assertThat(dimensions.getDimensionKeys().size(), is(2));
-        assertThat(dimensions.getDimensionValue("Environment"), is(randomEnvironment));
-        assertThat(dimensions.getDimensionValue("Key1"), is("Value1"));
+            verify(metricsLogger).setNamespace("Authentication");
+        }
+
+        @Test
+        void shouldEmitMetricWithDimensions() {
+            var dimensionSet = ArgumentCaptor.forClass(DimensionSet.class);
+            var metricsLogger = Mockito.mock(MetricsLogger.class);
+
+            var service = new CloudwatchMetricsService(configurationWithEnvironment("test"));
+
+            service.emitMetric("Metric", 1, Map.of("Key1", "Value1"), metricsLogger);
+
+            verify(metricsLogger).putDimensions(dimensionSet.capture());
+
+            assertThat(dimensionSet.getValue().getDimensionValue("Key1"), is("Value1"));
+            assertThat(dimensionSet.getValue().getDimensionKeys().size(), is(1));
+        }
+
+        @Test
+        void shouldEmitMetricCatchValidationExceptions() {
+            var metricsLogger = new MetricsLogger();
+            var service = new CloudwatchMetricsService(configurationWithEnvironment("test"));
+
+            service.emitMetric(
+                    new String(new char[2000]).replace('\0', 'A'),
+                    1,
+                    Map.of("Key1", "Value1"),
+                    metricsLogger);
+            service.emitMetric("Metric", 1, Map.of("Key1", ""), metricsLogger);
+            service.emitMetric("Metric", 1, Map.of("", "Value1"), metricsLogger);
+
+            List<LogEvent> events = logging.events();
+            assertThat(
+                    events,
+                    hasItem(
+                            withMessageContaining(
+                                    "Error emitting metric: Metric name exceeds maximum length of 1024")));
+            assertThat(
+                    events,
+                    hasItem(
+                            withMessageContaining(
+                                    "Error emitting metric: Dimension value cannot be empty")));
+            assertThat(
+                    events,
+                    hasItem(
+                            withMessageContaining(
+                                    "Error emitting metric: Dimension name cannot be empty")));
+            assertEquals(3, events.size());
+        }
     }
 
-    @Test
-    void shouldEmitMetricWithNamespace() {
-        var metricsLogger = Mockito.mock(MetricsLogger.class);
+    @Nested
+    class IncrementMfaMethodCounter {
+        @Test
+        void shouldIncrementMfaMethodCounterWithCorrectDimensions1() {
+            var spyService = Mockito.spy(CloudwatchMetricsService.class);
 
-        var service = new CloudwatchMetricsService(configurationWithEnvironment("test"));
+            spyService.incrementMfaMethodCounter(
+                    "SomeMfaMethodName",
+                    "test",
+                    "SomeOperation",
+                    "SomeResult",
+                    ACCOUNT_MANAGEMENT,
+                    MFAMethodType.AUTH_APP
+            );
 
-        service.emitMetric("Metric", 1, Collections.emptyMap(), metricsLogger);
+            var expectedDimensions = Map.of(
+                    "Environment",
+                    "test",
+                    "Operation",
+                    "SomeOperation",
+                    "Result",
+                    "SomeResult",
+                    "JourneyType",
+                    "ACCOUNT_MANAGEMENT",
+                    "MfaMethodType",
+                    "AUTH_APP"
+            );
 
-        Mockito.verify(metricsLogger).setNamespace("Authentication");
-    }
-
-    @Test
-    void shouldEmitMetricWithDimensions() {
-        var metricsLogger = Mockito.mock(MetricsLogger.class);
-        var dimensionSet = ArgumentCaptor.forClass(DimensionSet.class);
-
-        var service = new CloudwatchMetricsService(configurationWithEnvironment("test"));
-
-        service.emitMetric("Metric", 1, Map.of("Key1", "Value1"), metricsLogger);
-
-        Mockito.verify(metricsLogger).putDimensions(dimensionSet.capture());
-
-        assertThat(dimensionSet.getValue().getDimensionValue("Key1"), is("Value1"));
-        assertThat(dimensionSet.getValue().getDimensionKeys().size(), is(1));
-    }
-
-    @Test
-    void shouldEmitMetricCatchValidationExceptions() {
-        var metricsLogger = new MetricsLogger();
-        var service = new CloudwatchMetricsService(configurationWithEnvironment("test"));
-
-        service.emitMetric(
-                new String(new char[2000]).replace('\0', 'A'),
-                1,
-                Map.of("Key1", "Value1"),
-                metricsLogger);
-        service.emitMetric("Metric", 1, Map.of("Key1", ""), metricsLogger);
-        service.emitMetric("Metric", 1, Map.of("", "Value1"), metricsLogger);
-
-        List<LogEvent> events = logging.events();
-        assertThat(
-                events,
-                hasItem(
-                        withMessageContaining(
-                                "Error emitting metric: Metric name exceeds maximum length of 1024")));
-        assertThat(
-                events,
-                hasItem(
-                        withMessageContaining(
-                                "Error emitting metric: Dimension value cannot be empty")));
-        assertThat(
-                events,
-                hasItem(
-                        withMessageContaining(
-                                "Error emitting metric: Dimension name cannot be empty")));
-        assertEquals(3, events.size());
+            verify(spyService).putEmbeddedValue("SomeMfaMethodName", 1, expectedDimensions);
+        }
     }
 
     private static ConfigurationService configurationWithEnvironment(String test) {
@@ -117,4 +145,4 @@ class CloudwatchMetricsServiceTest {
             }
         };
     }
-}
+}}
